[package]
name = "set1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
anyhow = "1.0.70"
base64 = "0.21.0"
hex = "0.4.3"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "ice_ice_benchmark"
harness = false

[[bench]]
name = "break_repeating_key_xor"
harness = false
