[package]
name = "set1"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "ice_ice_benchmark"
harness = false

[[bench]]
name = "break_repeating_key_xor"
harness = false
