[package]
name = "set2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
set1 = { path = "../set1" }
aes = { workspace = true }
base64 = { workspace = true }
rand = "0.9.0"

[dev-dependencies]
hex = { workspace = true }
